0032221: Visualization, TKD3DHost - fix memory leak within D3DHost_FrameBuffer::Release()

D3DHost_FrameBuffer - added missing color texture release within FBO destruction.
OpenGl_View::RedrawImmediate() - fixed unexpected window buffer swap while rendering into offscreen myFBO.