src/D3DHost/D3DHost_View.hxx
@@ -40,6 +40,9 @@ public:
   //! Default destructor.
   Standard_EXPORT virtual ~D3DHost_View();
 
+  //! Release OpenGL resources.
+  Standard_EXPORT virtual void ReleaseGlResources (const Handle(OpenGl_Context)& theCtx) Standard_OVERRIDE;
+
   //! Creates and maps rendering window to the view.
   //! @param theWindow [in] the window.
   //! @param theContext [in] the rendering context. If NULL the context will be created internally.
